app/stylesheets/accounts/_new.sass
body.application.accounts.new, body.application.accounts.create
  
  h1

  #main
    width: 1000px
    position: relative
    #create-a-feed
      position: absolute
      right: -20px
      top: 30px
      width: 175px
      background-color: #b53f3c
      color: white
      padding: 20px 0px 20px 30px
      z-index: -1
      +border-radius(15px)
      border: 10px solid #922f2c
      +box-shadow($default-box-shadow-color, 0, 0, $default-box-shadow-blur, 0, inset)

      h3
        font-weight: bold
        margin-bottom: 15px
        line-height: 1.2
      p
        font-size: 14px
        line-height: 1.4
        margin-bottom: 15px
    
    form
      position: relative
      margin: 50px auto 70px
      +lightbox
      width: 560px

      fieldset.inputs
        li
          padding-left: 100px
          list-style-position: outside
          background-repeat: no-repeat
          background-position: 20px 0px
          margin: 20px 0px
          width: 485px

          label
            display: block
            margin: 5px 0
          input
            +border-radius(5px)
            +box-shadow(#ccc, 1px, 1px, 2px, 0, inset)
            padding: 0px 7px
            font-size: 22px
            width: 430px
            +serif

        li#user_address_input
          p.inline-hints
            float: left
            margin: 30px 0px -50px -90px
            font-size: 12px
            font-weight: bold
            +sans
            color: #3a3a3a

      fieldset.buttons
        margin-right: 12px
        li
          float: right
  #bubble-1, #bubble-2
    display: none

    background-image: url('/images/speech-bubble.png')
    width: 160px
    height: 50px
    text-align: center
    padding: 42px 13px 60px
    bottom: -140px
    position: absolute
    +serif
    color: #3b6085
    +text-shadow(#bfc8cf, 1px, 1px, 1px)
  #bubble-1
    left: -17px
  #bubble-2
    right: 0

  li#user_full_name_input
    background-image:  url('/images/step-1-icon.png')
  li#user_email_input
    background-image:  url('/images/step-2-icon.png')
  li#user_address_input
    background-image:  url('/images/step-3-icon.png')


  &.short

    h1
      width: 660px

    li#user_password_input
      background-image:  url('/images/step-3-icon.png')
    li#user_address_input
      background-image:  url('/images/step-4-icon-large.png')

